--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 }
 .nav-link:hover{
 	background: #f4f4f4;
-	color: #f97300;
+	color: #00D5FF;
 
 }
 .navbar-collapse{
@@ -54,7 +54,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 
 }
 .description h1{
-	color:#F97300 ;
+	color:#00D5FF ;
 }
 .description p{
 	color:#666;
@@ -63,8 +63,8 @@ html,h1,h2,h3,h4,h5,h6,a{
 	line-height: 1.5;
 }
 .description button{
-	border:1px  solid #F97300;
-	background:#F97300;
+	border:1px  solid #00D5FF;
+	background:#00D5FF;
 	color:#fff;
 }
 .about{
@@ -73,7 +73,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 	position: relative;
 }
 .about h1{
-	color:#F97300;
+	color:#00D5FF;
 	margin: 2em;
 }
 .about img{
@@ -106,7 +106,7 @@ html,h1,h2,h3,h4,h5,h6,a{
     position: relative;	
 }
 .portfolio h1{
-	color:#F97300;
+	color:#00D5FF;
 	margin: 2em;	
 }
 .portfolio img{
@@ -125,7 +125,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 	position: relative;	
 }
 .blog h1{
-	color:#F97300;
+	color:#00D5FF;
 	margin: 2em;	
 }
 .blog .card{
@@ -141,7 +141,7 @@ html,h1,h2,h3,h4,h5,h6,a{
  }	
 }
 .blog .card-title{
-	color:#F97300;
+	color:#00D5FF;
 	 
 }
 .blog .card-body{
@@ -153,7 +153,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 
 }
 .team h1{
-	color:#F97300;
+	color:#00D5FF;
 	margin: 2em;	
 }
 .team .item{
@@ -161,7 +161,7 @@ html,h1,h2,h3,h4,h5,h6,a{
 	overflow: hidden;	
 }
 .team .des{
-	background: #F97300;
+	background: #00D5FF;
 	color: #fff;
 	text-align: center;
 	border-top-right-radius: 93%;
@@ -188,13 +188,13 @@ html,h1,h2,h3,h4,h5,h6,a{
 
 .contact-form h1{
 	padding:2em 1px;
-	color: #F97300; 
+	color: #00D5FF; 
 }
 .contact-form .right{
 	max-width: 600px;
 }
 .contact-form .right .btn-secondary{
-	background:  #F97300;
+	background:  #00D5FF;
 	color: #fff;
 	border:0;
 }
